force-app/main/default/objects/ADM_Burndown_Item__c/ADM_Burndown_Item__c.object-meta.xml
<CustomObject>
    <label>Burndown Item</label>
    <nameField>
        <displayFormat>BDI-{000000000}</displayFormat>
        <label>Burndown Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Burndown Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>