force-app/main/default/objects/ADM_Burndown_Item__c/fields/Points_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Points_Remaining__c</fullName>
    <label>Points_Remaining</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>