force-app/main/default/objects/ADM_Burndown_Item__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <label>Sprint</label>
    <referenceTo>ADM_Sprint__c</referenceTo>
    <relationshipLabel>Burndown Items</relationshipLabel>
    <relationshipName>Burndown_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>