force-app/main/default/objects/ADM_Burndown_Item__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Task_ID__c , &quot;TASK&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task</label>
    <type>Text</type>
</CustomField>