force-app/main/default/objects/ADM_Burndown_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actual</fullName>
            </value>
            <value>
                <fullName>Baseline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>