force-app/main/default/objects/ADM_Burndown_Item__c/fields/Upsert_Key__c.field-meta.xml
<CustomField>
    <fullName>Upsert_Key__c</fullName>
    <description>This field value will uniquely identify a burndown item using the following format: &lt;SPRINT_ID&gt;&lt;YYYYMMDD&gt;&lt;A/B&gt; Where &lt;A/B&gt; indicates whether it&#39;s the Actual or the Baseline figure</description>
    <externalId>true</externalId>
    <label>Upsert Key</label>
    <length>27</length>
    <type>Text</type>
</CustomField>