force-app/main/default/objects/ADM_Burndown_Item__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work</label>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipLabel>Burndown Items</relationshipLabel>
    <relationshipName>Burndown_Items</relationshipName>
    <type>Lookup</type>
</CustomField>